# napi-bench

./: .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  chart.js  package-lock.json  package.json  results.md  test-ffast.js  test-napi-rs.js  test-napi.js
src/: napi-sum.cpp  sum.cc
